fix topics overflow issue

--- a/src/app/pharos-main/data-list/topic-table/topic-table.component.css
+++ b/src/app/pharos-main/data-list/topic-table/topic-table.component.css
@@ -8,11 +8,11 @@
 .topic-grid {
   display: grid;
   grid-auto-rows: max-content;
-  grid-template-columns: repeat(auto-fill, minmax(48%, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(32%, 1fr));
   grid-gap: 1em;
   grid-row-gap: 5em;
-  padding: 1vw;
   justify-items: center;
+  margin-bottom: 5vh;
 }
 
 .topic-grid > div {
@@ -23,4 +23,14 @@
   cursor: pointer;
 }
 
+.mat-drawer-content {
+  overflow: hidden !important;
+}
+
+@media only screen and (max-width: 768px) {
+  .topic-grid {
+    grid-template-columns: repeat(auto-fill, minmax(90%, 1fr));
+
+  }
+}
 
